--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "cytoscape": "^3.23.0",
+    "cytoscape-cola": "^2.5.1",
     "cytoscape-dagre": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "read-gedcom": "^0.3.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -40,10 +42,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/cytoscape": "^3.19.9",
+    "@types/cytoscape-dagre": "^2.3.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@types/cytoscape-dagre": "^2.3.0"
+    "@types/react-dom": "^18.0.10"
   }
 }
