--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "read-gedcom": "^0.3.2",
+    "tippy.js": "^6.3.7",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
