--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cytoscape": "^3.23.0",
     "cytoscape-cola": "^2.5.1",
     "cytoscape-dagre": "^2.5.0",
+    "rc-slider": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
