--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cytoscape": "^3.23.0",
     "cytoscape-cola": "^2.5.1",
     "cytoscape-dagre": "^2.5.0",
+    "cytoscape-popper": "^2.0.0",
     "rc-slider": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,6 +47,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/cytoscape": "^3.19.9",
     "@types/cytoscape-dagre": "^2.3.0",
+    "@types/cytoscape-popper": "^2.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
