--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "rc-slider": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "read-gedcom": "^0.3.2",
     "tippy.js": "^6.3.7",
